@@ -1,6 +1,12 @@
 # ChangeLog for Portage; the Gentoo Linux ports system 
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 
+	13 Dec 2002; Nicholas Jones <carpaski@gentoo.org> emerge/portage.py:
+	Added disabled prelink code. Needs a little more work. Gave portage the
+	ability to restart on upgrades to the portage version. Ebuilds for prior
+	versions will intentionally die on upgrade. USE=build disables it so
+	bootstrap isn't affected.
+
 *portage-2.0.45-r4 (11 Dec 2002): Feature addition: PDEPEND
 
   11 Dec 2002; Nicholas Jones <carpaski@gentoo.org> ebuild.sh/portage.py:
